# sari-web

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.adoc  api.py  app.py  filter-pkgs.awk  gen-requirements.sh  package.json  pyproject.toml  requirements.txt  web.py  webpack.config.js  zappa_settings.json
.github/workflows/: build.yml  ci-cd.yml
common/: __init__.py  aws.py  saml.py  sari_config.py  sari_state.py
src/: base.css  base.html  farewell.html  io_page.html  jquery_ext.js  session.js
src/db_config/: app.js  page.html  style.css
src/select_account/: app.js  page.html  style.css
templates/: base.html  db_config.html  io_page.html  not_found.html  select_account.html
terraform/: okta.tf  providers.tf
